<resources>
    <string name="app_name">Election_Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fg_activity_list_name">活动列表</string>
    <string name="av_activity_detail_name">活动详情</string>
    <string name="av_add_activity_name">添加活动</string>
    <string name="av_activity_voted_name_title">待选举人姓名：</string>
    <string name="av_activity_voted_number_title">待选举人票数：</string>
    <string name="fg_mine_info_name">我的信息</string>
    <string name="activity_name">物网1501班19年上半年优秀学生选举</string>
    <string name="activity_name_title">活动名称：</string>
    <string name="activity_begin_time">2019-04-01</string>
    <string name="activity_begin_time_title">开始时间：</string>
    <string name="activity_end_time">2019-04-28</string>
    <string name="activity_end_time_title">结束时间：</string>
    <string name="activity_create_user_name_title">创 建 人：</string>
    <string name="activity_grade_title">创建班级：</string>

    <string name="title_activity_main">DateTimePicker Example</string>

    <string name="selected_time">The time you picked will be shown here.</string>

    <string name="selected_date">The date you picked will be shown here.</string>

    <string name="selected_datetime">The date and time you picked will be shown here.</string>

    <string name="pick_time">Pick Time</string>

    <string name="pick_date">Pick Date</string>

    <string name="original_button">Framework Picker</string>

    <string name="pick_datetime">Pick Date+Time</string>

    <string name="mode_24_hours">Use 24 hour mode</string>

    <string name="mode_dark">Use dark theme</string>

    <string name="mode_custom_accent">Use custom accent</string>

    <string name="vibrate">Vibrate on touch</string>

    <string name="dismiss">Dismiss on pause (eg: orientation change)</string>

    <string name="title">Show a title</string>

    <string name="show_version_2">Use marshmallow layout</string>

    <string name="show_year_first">Show the year picker first</string>

    <string name="enable_seconds">Show seconds picker</string>

    <string name="enable_minutes">Show minutes picker</string>

    <string name="limit_times">Limit selectable times</string>

    <string name="limit_dates">Limit selectable dates</string>

    <string name="disable_dates">Disable specific dates</string>

    <string name="disable_times">Disable specific times</string>

    <string name="highlight_dates">Highlight certain dates</string>

    <string name="switch_orientation">Switch scroll orientation</string>

    <string name="action_settings">Settings</string>

    <string name="tab_title_time">Time</string>

    <string name="tab_title_date">Date</string>

    <string name="tab_title_datetime">Date+Time</string>
</resources>
